add some things

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 
     </head>
     <body></body>
-        <a href="https://github.com/Ranaranaashu/assignment/blob/master/index1.html">link for index1</a><br>
-
-        <a href="https://github.com/Ranaranaashu/assignment/blob/master/index2.html">link for index2</a><br>
-        <a href="https://github.com/Ranaranaashu/assignment/blob/master/index3.html">link for index3</a><br>
+        <a href="./index1.html" target="_blank">link for index1</a><br>
+         <a href="./index2.html" target="_blank">link for index2</a><br>
+        <a href="./index3.html" target="_blank">link for index3</a><br>
 
     </body>
 </html>
